add navigation and style

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<div class="navbar">
+    <div class="logo">Recipe</div>
+    <div class="links">
+      <a href="/">Recipe</a>
+      <a href="/shopping">Shopping</a>
+    </div>
+  </div>
+  
