--- a/src/app/components/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipe-list/recipe-list.component.html
@@ -1,17 +1,15 @@
-
-    <h1>Recipes</h1>
-    <div class="card-container">
-        <div class="card" *ngFor="let recipe of recipes">
-          <img src="{{ recipe.imagePath }}" alt="Card Image" />
-          <h3>{{ recipe.name }}</h3>
-          <div class="ingredient">
-            <p *ngFor="let ingredient of recipe.ingredients">
-              # {{ ingredient.name }} ({{ ingredient.amount }})
-            </p>
-          </div>
-          <div class="view-container">
-            <button>View</button>
-          </div>
-        </div>
-      </div>
-
+<h1>Recipes</h1>
+<div class="card-container">
+  <div class="card" *ngFor="let recipe of recipes; let i =index">
+    <img src="{{ recipe.imagePath }}" alt="Card Image" />
+    <h3>{{ recipe.name }}</h3>
+    <div class="ingredient">
+      <p *ngFor="let ingredient of recipe.ingredients">
+        # {{ ingredient.name }} ({{ ingredient.amount }})
+      </p>
+    </div>
+    <div class="view-container">
+      <button class="view-button" [routerLink]="['/recipes',i]">View</button>
+    </div>
+  </div>
+</div>
