routing new componens

--- a/src/app/components/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipe-list/recipe-list.component.html
@@ -1,3 +1,5 @@
+
+<button class="add-recipes" [routerLink]="['/new']">Add</button>
 <h1>Recipes</h1>
 <div class="card-container">
   <div class="card" *ngFor="let recipe of recipes; let i =index">
