--- a/src/app/pages/recipe-detail/recipe-detail.component.html
+++ b/src/app/pages/recipe-detail/recipe-detail.component.html
@@ -2,7 +2,7 @@
   <div class="button-container">
     <button [routerLink] ="['/recipes']">back</button>
     <div>
-      <button>edit</button>
+      <button (click)="onEditClick()">edit</button>
       <button>delete</button>
       
     </div>
