--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,42 @@
-<p>recipe-edit works!</p>
+<form>
+  <div>
+    <label for="name">Name</label>
+    <input type="text" id="name" class="form-control" formControlName="name" />
+  </div>
+  <div>
+    <label for="imagePath">Kép URL:</label>
+    <input
+      type="text"
+      id="imagePath"
+      class="form-control"
+      formControlName="imagePath"
+      #imagePath
+    />
+  </div>
+  <div>
+    <img [src]="imagePath.value" />
+  </div>
+  <div>
+    <label for="description">Description</label>
+    <textarea
+      type="text"
+      id="description"
+      class="form-control"
+      rows="6"
+      formControlName="description"
+    ></textarea>
+  </div>
+
+  <!-- Hozzávalók -->
+  <div>
+    <label for="ingredients">ingredients:</label>
+    <div>
+      <input type="text" name="ingredients" required />
+      <button type="button">Delete</button>
+    </div>
+    <button type="button">Add</button>
+  </div>
+
+ 
+  <button type="submit">Save</button>
+</form>
