addIngredient function html

--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -32,7 +32,7 @@
     <div *ngFor="let ingredientGroup of ingredientsFormArray.controls; let i = index" [formGroupName]="i">
       <input type="text" formControlName="name" placeholder="ingredient" />
       <input type="text" formControlName="amount" placeholder="db" />
-      <button type="button" >Add</button>
+      <button type="button" (click)="addIngredient()">Add</button>
       <button type="button" >Delete</button>
     </div>
   </div>
