--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -33,7 +33,7 @@
       <input type="text" formControlName="name" placeholder="ingredient" />
       <input type="text" formControlName="amount" placeholder="db" />
       <button type="button" (click)="addIngredient()">Add</button>
-      <button type="button" >Delete</button>
+      <button type="button" (click)="deleteIngredient(i)">Delete</button>
     </div>
   </div>
 
