add delete Recipe function

--- a/src/app/pages/recipe-detail/recipe-detail.component.html
+++ b/src/app/pages/recipe-detail/recipe-detail.component.html
@@ -3,7 +3,7 @@
     <button [routerLink] ="['/recipes']">back</button>
     <div>
       <button (click)="onEditClick()">edit</button>
-      <button>delete</button>
+      <button (click)="deleteRecipe()">delete</button>
       
     </div>
   </div>
