ingredients add to shopping list

--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -1,1 +1,12 @@
-<p>shopping-list works!</p>
+<div class="ingredients-list">
+  <div
+    *ngFor="let ingredient of ingredients; let i = index"
+    class="ingredient-item"
+  >
+    <span>{{ ingredient.name }} ({{ ingredient.amount }})</span>
+    <div>
+      <button>Edit</button>
+      <button>Delete</button>
+    </div>
+  </div>
+</div>
