add-shopping component style

--- a/src/app/components/add-shopping/add-shopping.component.html
+++ b/src/app/components/add-shopping/add-shopping.component.html
@@ -1,1 +1,11 @@
-<p>add-shopping works!</p>
+<form>
+  <div>
+    <label for="newIngredientName">Name:</label>
+    <input type="text" id="newIngredientName" required /> 
+    <label for="newIngredientAmount">Amount:</label>
+    <input type="text" id="newIngredientAmount" required />
+  </div>
+  <div>
+    <button type="submit">Add</button>
+  </div>
+</form>
