--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -1,3 +1,4 @@
+<app-add-shopping></app-add-shopping>
 <div class="ingredients-list">
   <div
     *ngFor="let ingredient of ingredients; let i = index"
