--- a/src/app/components/add-shopping/add-shopping.component.html
+++ b/src/app/components/add-shopping/add-shopping.component.html
@@ -6,6 +6,6 @@
     <input type="text" id="newIngredientAmount" name="newIngredientAmount" ngModel required />
   </div>
   <div>
-    <button type="submit" >Add</button>  
+    <button type="submit"  [disabled]="!form.valid">Add</button>  
   </div>
 </form>
