--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -1,12 +1,20 @@
-
 <div class="ingredients-list">
   <div
     *ngFor="let ingredient of ingredients; let i = index"
     class="ingredient-item"
   >
-    <span>{{ ingredient.name }} ({{ ingredient.amount }})</span>
+    <span *ngIf="!editMode || editingIndex !== i"
+      >{{ ingredient.name }} ({{ ingredient.amount }})</span
+    >
+    <div class="editMode" *ngIf="editMode && editingIndex === i">
+      <input type="text" [(ngModel)]="ingredients[i].name" />
+      <input type="number" [(ngModel)]="ingredients[i].amount" />
+    </div>
     <div>
-      <button>Edit</button>
+      <button *ngIf="!editMode" (click)="toggleEditMode(i)">Edit</button>
+      <button *ngIf="editMode && editingIndex === i" (click)="saveChanges()">
+        Save
+      </button>
       <button>Delete</button>
     </div>
   </div>
