--- a/src/app/components/shopping-list/shopping-list.component.scss
+++ b/src/app/components/shopping-list/shopping-list.component.scss
@@ -15,6 +15,25 @@ $ingredient-color: #555;
   margin-bottom: 10px;
   font-size: 16px;
 
+  .editMode{
+    display: flex;
+    input {
+      padding: 5px;
+      margin: 2px;
+      border: 1px solid $ingredient-color;
+      border-radius: 4px;
+      transition: border-color 0.3s ease;
+      width: 100%;
+  
+      &:focus {
+        outline: none;
+        border-color: $hover-color;
+      }
+    }
+  }
+
+  
+
   button {
     border: none;
     background-color: transparent;
