add delete ingredient function

--- a/src/app/components/shopping-list/shopping-list.component.html
+++ b/src/app/components/shopping-list/shopping-list.component.html
@@ -15,7 +15,7 @@
       <button *ngIf="editMode && editingIndex === i" (click)="saveChanges()">
         Save
       </button>
-      <button>Delete</button>
+      <button (click)="deleteIngredient(i)">Delete</button>
     </div>
   </div>
 </div>
