--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <div class="logo">Recipe</div>
+    <div class="logo" (click)="recipesNavigate()" >Recipe</div>
     <div class="links">
       <a href="/">Recipe</a>
       <a href="/shopping">Shopping</a>
