--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -5,7 +5,6 @@ $hover-color: #2980b9;
 $hover-text-color: #fff;
 
 .navbar {
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,6 +14,7 @@ $hover-text-color: #fff;
     font-size: 1.5rem;
     font-weight: bold;
     color: $primary-color;
+    cursor: pointer;
   }
 
   .links {
