--- a/src/app/pages/recipe-detail/recipe-detail.component.scss
+++ b/src/app/pages/recipe-detail/recipe-detail.component.scss
@@ -1,7 +1,4 @@
-$primary-color: #3498db;
-$hover-color: #2980b9;
-$hover-text-color: #fff;
-$ingredient-color: #555;
+@use '../../scss/variables' as v;
 
 .detail-container {
   width: 100%;
@@ -15,15 +12,15 @@ $ingredient-color: #555;
       border: none;
       background-color: transparent;
       font-weight: bold;
-      color: $primary-color;
+      color: v.$primary-color;
       padding: 10px;
       font-size: 16px;
       border-radius: 4px;
       cursor: pointer;
 
       &:hover {
-        background-color: $hover-color;
-        color: $hover-text-color;
+        background-color: v.$hover-color;
+        color: v.$hover-text-color;
       }
     }
   }
@@ -34,19 +31,23 @@ $ingredient-color: #555;
     align-items: center;
     width: 100%;
 
-    img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
+    .recipe-image {
+      flex: 1;
+
+      img {
+        width: 100%; 
+        max-height: 900px;       
+      }
     }
 
     .recipe-text {
+      flex: 1;
       width: 100%;
       text-align: center;
 
       h1 {
         font-size: 2.5rem;
-        color: $hover-color;
+        color: v.$hover-color;
       }
 
       p {
@@ -57,17 +58,18 @@ $ingredient-color: #555;
       .recipe-ingredients {
         display: flex;
         justify-content: center;
-        color: $ingredient-color;
+        color: v.$ingredient-color;
 
         span {
           padding: 10px;
         }
       }
+
       .ingredient-button {
         border: none;
         background-color: transparent;
         font-weight: bold;
-        color: $primary-color;
+        color: v.$primary-color;
         padding: 10px;
         font-size: 16px;
         border-radius: 4px;
@@ -76,8 +78,8 @@ $ingredient-color: #555;
         align-self: flex-end;
 
         &:hover {
-          background-color: $hover-color;
-          color: $hover-text-color;
+          background-color: v.$hover-color;
+          color:v.$hover-text-color;
         }
       }
     }
