--- a/src/app/components/add-shopping/add-shopping.component.html
+++ b/src/app/components/add-shopping/add-shopping.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="form-group">
     <label for="newIngredientAmount">Amount:</label>
-    <input type="text" id="newIngredientAmount" name="newIngredientAmount" ngModel required class="form-control" />
+    <input type="number" id="newIngredientAmount" name="newIngredientAmount" ngModel required class="form-control" />
   </div>
   <div class="form-group">
     <button type="submit" [disabled]="!form.valid" class="btn btn-primary">Add</button>
