disabled function add /edit button

--- a/src/app/pages/recipe-edit/recipe-edit.component.scss
+++ b/src/app/pages/recipe-edit/recipe-edit.component.scss
@@ -1,4 +1,4 @@
-@use '../../scss/variables' as v;
+@use "../../scss/variables" as v;
 
 form {
   max-width: 600px;
@@ -60,6 +60,11 @@ form {
 
     &:hover {
       background-color: v.$hover-color;
+      color: v.$hover-text-color;
+    }
+    &:disabled {
+      background-color: v.$disabled;
+      cursor: not-allowed;
       color: v.$hover-text-color;
     }
   }
