--- a/src/app/pages/recipe-edit/recipe-edit.component.html
+++ b/src/app/pages/recipe-edit/recipe-edit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="recipeForm" >
+<form [formGroup]="recipeForm" #editForm="ngForm">
   <div>
     <label for="name">Name</label>
     <input type="text" id="name" class="form-control" formControlName="name" />
@@ -38,5 +38,5 @@
   </div>
 
  
-  <button type="submit" (click)="saveRecipe()">Save</button>
+  <button type="submit" (click)="saveRecipe()"  [disabled]="!editForm.valid">Save</button>
 </form>
